dist/1.0/bin/sample/retrieveUnpackaged/objects/Component_Relation__c.object
<CustomObject>
    <description>Allows for defining requirement and exclusion relations between components.</description>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Relation to Bundle</description>
        <inlineHelpText>Relation to Bundle</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Component Relations</relationshipLabel>
        <relationshipName>Component_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component1__c</fullName>
        <description>First (main) Component of the relation</description>
        <inlineHelpText>First (main) Component of the relation</inlineHelpText>
        <label>Component1</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Component Relations</relationshipLabel>
        <relationshipName>Component_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component2__c</fullName>
        <description>Secondary Component of the relation</description>
        <inlineHelpText>Secondary Component of the relation</inlineHelpText>
        <label>Component2</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Component Relations (Component2)</relationshipLabel>
        <relationshipName>Component_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Relation&apos;s name</description>
        <inlineHelpText>Relation&apos;s name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <description>Provides information about Relation Type between Component 1 and Component 2 - see available picklist values for more details</description>
        <inlineHelpText>Provides information about Relation Type between Component 1 and Component 2 - see available picklist values for more details</inlineHelpText>
        <label>Relation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Component Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Component Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>